package ducksim

type FlyBehavior interface {
	Fly()
}
