package ducksim

type QuackBehavior interface {
	Quack()
}
